# c-gtest-example

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/: copilot-instructions.md
doc/: 00_プロジェクト概要.md  01_環境構築ガイド.md  02_モジュール別テスト説明.md  03_FFFスタブ化ガイド.md  04_ビルドと実行ガイド.md  05_モジュール追加ガイド.md  MODULE_ADD_GUIDE.md  README.md  STRUCTURE.txt
double/_template/: module_stub_template.c
double/moduleA/: moduleA_stub.c
double/moduleB/: moduleB_stub.c
double/moduleC/: moduleC_stub.c
tests/: CMakeLists.txt
tests/_template/: test_module_template.cpp
tests/moduleA/: CMakeLists.txt  test_moduleA.cpp
tests/moduleB/: CMakeLists.txt  test_moduleB.cpp
tests/moduleC/: CMakeLists.txt  test_moduleC.cpp
tools/: add_module.sh
tools/template/double/: module_stub_template.c
tools/template/tests/: CMakeLists.txt.template  test_module_template.cpp
